Start to autogenerate dashboards.js from statsd info in graphite

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                         </ul>
                         <div class="btn-toolbar pull-right">
                             <div class="btn-group timepanel">
+                                <a class="btn btn-small range" data-timeframe="1" href="#1m">1m</a>
                                 <a class="btn btn-small range" data-timeframe="10" href="#10m">10m</a>
                                 <a class="btn btn-small range" data-timeframe="60" href="#1h">1h</a>
                                 <a class="btn btn-small range" data-timeframe="180" href="#3h">3h</a>
